--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico">
 		<link href="css/screen.css" type="text/css" rel="stylesheet" media="screen" />
-		<link href="css/print.css" type="text/css" rel="stylesheet" media="print" />
+    <link href="css/print.css" type="text/css" rel="stylesheet" media="print" />
+    <link href="css/reset.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <div id="content"></div>
